[package]
name = "dwt"
version = "0.3.1"
license = "Apache-2.0/MIT"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
description = "The package provides an algorithm to compute the discrete wavelet transform."
documentation = "https://stainless-steel.github.io/dwt"
homepage = "https://github.com/stainless-steel/dwt"
repository = "https://github.com/stainless-steel/dwt"

[dev-dependencies]
assert = "0.6"
